tests/models/f32/fail/ge.rs
use dade::model;
#[model]
struct TestModel {
    #[field(ge = 2)]
    value: f32,
}
fn main() {}
